@@ -349,13 +349,22 @@
       </description>
     </function>
 
-    <function name="$pvalue" section="access" targ="dpvalue" output="scalar">
+    <function name="$pvalue" section="access" targ="dpvalue" output="scalar-or-matrix">
       <description>
 	<para>
-	  Returns the p-value of the test statistic that was generated by
-	  the last explicit hypothesis-testing command, if any (e.g.
-	  <lit>chow</lit>).  See <guideref targ="sec:genr-internal"/> 
-	  for details.
+	  Returns the p-value of the test statistic that was generated
+	  by the last explicit hypothesis-testing command, if any
+	  (e.g.  <lit>chow</lit>).  See <guideref
+	  targ="sec:genr-internal"/> for details.
+	</para>
+	<para>
+	  In most cases the return value is a scalar but sometimes it
+	  is a matrix (for example, the trace and lambda-max p-values
+	  from the Johansen cointegration test); in that case the
+	  values in the matrix are laid out in the same pattern as the
+	  printed results.
+	</para>
+	<para>
 	  <seelist>
 	    <fncref targ="$test"/>
 	  </seelist>
@@ -534,13 +543,22 @@
       </description>
     </function>
 
-    <function name="$test" section="access" output="scalar">
+    <function name="$test" section="access" output="scalar-or-matrix">
       <description>
 	<para>
 	  Returns the value of the test statistic that was generated by
 	  the last explicit hypothesis-testing command, if any (&eg;
 	  <lit>chow</lit>). See <guideref targ="sec:genr-internal"/> 
 	  for details.
+	</para>
+	<para>
+	  In most cases the return value is a scalar but sometimes it
+	  is a matrix (for example, the trace and lambda-max
+	  statistics from the Johansen cointegration test); in that
+	  case the values in the matrix are laid out in the same
+	  pattern as the printed results.
+	</para>
+	<para>
 	  <seelist>
 	    <fncref label="\$pvalue" targ="dpvalue"/>
 	  </seelist>
