@@ -10,6 +10,8 @@ version 1.9.4, in progress
 - New "set" variable, matrix_mask, which can be used to
   control the included observations when constructing
   matrices from series
+- Accessors $test and $pvalue: generalize to allow matrix
+  values (e.g. from the coint2 command)
 - Functions corr(), cov() and fcstats(): accept two vector
   arguments in place of two series
 - Allow deletion of locale matrices within functions
